# cmake-practice

./: CMakeLists.txt  main.cc
lib/: CMakeLists.txt
